fix: a11y fix focus not visible #46

--- a/src/app.scss
+++ b/src/app.scss
@@ -13,7 +13,6 @@
 
 a {
   color: colors.$green;
-  outline: none;
   text-decoration: none;
 }
 
@@ -29,7 +28,6 @@ hr {
 }
 
 button {
-  outline: none;
   text-decoration: none;
   color: colors.$beige;
 }
